RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
/* ... */
.fr-param-panel { margin: 4px 0px 0px 0px; width: 100%; height: 100%; }
.fr-param-element-border { margin: 10px 6px; display: inline-block; }
.fr-param, .fr-param-client { margin: 4px; width: 170px; font-size: 13px; padding: 4px; border: solid 1px #1F98C7; }
.fr-param-dropdown-textbox { width: 150px; padding-right: 24px; overflow:hidden;text-overflow:ellipsis; white-space:nowrap; }
.fr-param-item-container { margin-bottom: 5px; }
.fr-param-element-container { display: inline-block; position: relative; }
.fr-param-label { margin: 4px; display: inline-block; }
.fr-param-radio { width: 18px; }
.fr-param-radio-label { color: #ffffff; }
.fr-param-checkbox { margin-left: 4px; margin-right: 2px; padding: 2px; display:inline-block; }
.fr-param-select { width: 180px; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; }
.fr-param-submit-container { display: inline-block; }
.fr-param-cancel-container { display: inline-block; }
.fr-param-cancel { max-width:120px; height: 39px; margin-left: 30px; text-align:center; cursor: pointer; font-size: 11pt; color: #ffffff; background-color: transparent; }
.fr-param-enable { background-color: rgb(255,255,255); color: rgb(0,0,0); }
.fr-param-disable { background-color: rgb(222,231,242); color: rgb(84,84,84); }
.fr-param-dropdown { padding: 4px; margin: 0px 4px; border: 1px solid DarkGray; color: black; overflow: auto; background-color: window; position: absolute; z-index: 11; display: none; max-height: 180px; }
  .fr-param-dropdown input[type="checkbox"] { padding: 5px; font-size: 1em; margin: 5px 0px 6px 0px; }
  .fr-param-dropdown Label { margin: 4px; }
.fr-param-dropdown-input { margin-bottom: 0px; }
.fr-param-dropdown-icon { height: 18px; width: 18px; background-image: url(../Images/OpenDropDown.png); background-repeat: no-repeat; }
.fr-param-dropdown-iconcontainer { position: absolute; right: 8px; top: 8px; }
.fr-param-dropdown-textarea { width: 95%; height: 80px; overflow: auto; padding: 2px; }
.fr-param-checkbox-container { display: inline-block; min-width: 176px; margin: 2px 4px; padding: 1px; }
.ui-datepicker-trigger { vertical-align: middle; margin-bottom: 4px; }
.fr-param-dropdown-img { vertical-align: middle; margin-bottom: 4px; }
.fr-param-error { border-width: thin; border-color: red; }
.fr-param-error-placeholder { margin-left: 4px; }
.fr-param-nullable { display:inline-block; }
.fr-param-required{}
.fr-param-watermark {color:lightgray;}

/*this is for jquery validate default class style, seems static*/
.error { color: #E80C4D; }
.fr-param-form{}
    .fr-param-form .fr-param-button{ width: 110px; height: 39px; margin-left: 10px; text-align: center; border: 1px solid #8c9eba; cursor: pointer; font-size: 13pt; color: #ffffff; background: #5e96cf; /* Old browsers */ background: -moz-linear-gradient(top, #5e96cf 0%, #4e70b0 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5e96cf), color-stop(100%,#4e70b0)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(top, #5e96cf 0%,#4e70b0 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(top, #5e96cf 0%,#4e70b0 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(top, #5e96cf 0%,#4e70b0 100%); /* IE10+ */ background: linear-gradient(to bottom, #5e96cf 0%,#4e70b0 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5e96cf', endColorstr='#4e70b0',GradientType=0 ); /* IE6-9 */ }

.fr-print-section { display: none; }

.fr-print-form { }

.fr-print-options-label { width: 100%; margin: 0 11px 16px 0; display: block; }

.fr-print-margins-label { width: 100%; margin: 12px 0 16px 0; display: block; }

.fr-print-settings-pair-widget { vertical-align: top; display: inline-block; }

.fr-print-form .fr-print-settings { display: inline-table; vertical-align: top; padding: 0; margin: 0 16px 0 0; }

.fr-print-settings td { padding-bottom: 10px; vertical-align: top; }

.fr-print-orientation-container { display: inline-block; margin-right: 11px; }

.fr-print-landscape { width: 44px; height: 31px; display: inline-block; }

.fr-print-landscape-icon { background-image: url(../images/print_landscape.png); }

.fr-print-landscape-icon-active { background-image: url(../images/print_landscape_1.png); }

.fr-print-portrait { width: 31px; height: 37px; margin-right: 14px; display: inline-block; }

.fr-print-portrait-icon { background-image: url(../images/print_portrait.png); }

.fr-print-portrait-icon-active { background-image: url(../images/print_portrait_1.png); }

.fr-print-setting { margin-bottom: 10px; }

.fr-print-label { height: 20px; margin: 0 5px 0px 0; display: inline-block; }

.fr-print-text { width: 50px; height: 20px; font-size: 13pt; font-weight: bold; color: #666666; text-align: right; padding: 0 6px 0 0; border: 1px solid #c6d1e1; }

.fr-print-error-span { margin: 2px 0 0 4px; text-align: right; font-size: 10pt; }

.fr-print-error-position { display: inline-block; }

.fr-print-error { border-width: thin; border-color: red; }


.fr-print-unit-label { width: 20px; font-size: 10pt; color: #999999; margin-left: 4px; }


.fr-render-sort-unsorted { background-image: url('../../reportviewer/Images/NotSorted.gif'); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-render-sort-descending { background-image: url(../../reportviewer/Images/SortDecending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-render-sort-ascending { background-image: url(../../reportviewer/Images/SortAccending.gif); display: inline; background-repeat: no-repeat; padding: 2px 7px 2px 7px; background-position: center; cursor: pointer; float: right; }

.fr-rotate-90 { -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg); -o-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); }
/* ... */

